fix styling for index.html cards are now rendering properly and spacing is correct

--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-    color: white;
+    color: aliceblue;
     padding: 10px;
 }
 
@@ -18,4 +18,8 @@ h1 {
     background-color: white;
     justify-content: space;
 
+}
+
+.hide {
+    display: none;
 }
